<resources>
    <string name="app_name">Graffiti</string>
    <string name="viewTitle">View Mode</string>
    <string name="menuTitle">GraffitiMap</string>
    <string name="explore">Explore</string>
    <string name="draw">Draw</string>
    <string name="view">View</string>
    <string name="viewMap">View Map</string>
    <string name="menuBut">Main Menu</string>
    <string name="backButtonText">Back</string>
    <string name="drawButtonText">Take Picture</string>
    <string name="login">Login to Google</string>
    <string name="quit">Quit</string>
    <string name="user_name"><b>USER: </b></string>
    <string name="colorTheme">Dark Mode?</string>

    <string name="map">Map</string>
    <string name="drawCanvas">Draw Canvas</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>

    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <string-array name="weights_array">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>

    <string-array name="colors_array">
        <item>White</item>
        <item>Black</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Brown</item>
        <item>Pink</item>
        <item>Orange</item>
    </string-array>
</resources>